# cpp_cmake_tp

./: CMakeLists.txt  README.md
include/: CMakeLists.txt
include/project_name/: CMakeLists.txt  config.hpp.in
res/: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt
